# TerminalCam

./: .gitignore  CMakeLists.txt  README.md  TerminalCam.cpp  TerminalCam.h  main.cpp  tests.cpp
